fixed spacing on education section

--- a/main.css
+++ b/main.css
@@ -118,6 +118,12 @@ center {
 
 }
 
+#education {
+  margin-left:5%;
+  margin-right:5%;
+
+}
+
 #computerimg {
   /* height:480px; */
   width:100%;
